# airi

./: .deepsource.toml  .env  .env.example  .eslintcache  .gitattributes  .gitignore  .gitmodules  .jscpd.json  .npmrc  .prettierignore  .prettierrc.json  .syncpackrc.json  .tech-radar.yml  .vercel-force-rebuild-1760120844  .vfox.toml  2026-06-24-030150-make-a-full-sweep-of-pr-59-act-autonomously-fan.txt  @AGENTS.md  ADDITIONAL-FIXES.md  AGENTS.md  AI-PROVIDERS-SYSTEM-REPORT.md  AIRI-AI-PROVIDERS-SETUP.md  AIRI_PROGRESS.md  CHANGELOG.md  CHANGES.md  CLAUDE.md  CONTRIBUTION_SUMMARY.md  Cargo.toml  DEEPSOURCE_REVIEW.md  FEATURE-volc-realtime-voice.md  FIXES-SUMMARY.md  HANDOFF-PR59-SWEEP.md  LICENSE  PROMOTION_STRATEGY.md  README.ja-JP.md  README.md  README.zh-CN.md  RULES.md  SILERO-TTS-FIXES.md  TEST-COMPONENTS.md  bump.config.ts  (+63 more)
apps/stage-tauri/: Cargo.toml  index.html  init.sh  package.json  tauri.conf.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/stage-tauri/.cargo/: config.toml
apps/stage-tauri/capabilities/: default.json
apps/stage-tauri/scripts/: live2d-sdk-cache.test.ts  live2d-sdk-cache.ts
apps/stage-tauri/src/: App.vue  app_lifecycle.rs  channel_server.rs  main.rs  main.ts  settings-connection.test.ts  settings-connection.ts  styles.css  window-routes.test.ts  window-routes.ts  window_manager.rs
apps/stage-tauri/src/commands/: app.rs  auth.rs  auto_updater.rs  events.rs  godot.rs  i18n.rs  mcp.rs  misc.rs  mod.rs  notice.rs  plugins.rs  screen.rs  server_channel.rs  shortcut.rs  sidecar.rs  system_preferences.rs  widgets.rs  window.rs  (+1 more)
(+3931 files in other folders)
