[package]
name = "airi-tauri"
version = "0.1.0"
description = "AIRI Tauri desktop app"
authors = ["AIRI Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
